src/test/deca/syntax/valid/created/class_vide.deca
// Description :
//    test d'une classe vide
//
// Resultats :
//		Ok

class A{
}
