src/test/deca/syntax/invalid/created/class/missing_ident.deca
// Description :
//    decl class indent manquant
//
// Resultats :
//		Syntaxe error

class A {
a;

}